--- a/src/Components/HomePage/ContactForm/ContactForm.css
+++ b/src/Components/HomePage/ContactForm/ContactForm.css
@@ -1,187 +1,180 @@
-.ContactSection{
-    background-image:url('./Backgrounds.jpg') ;
-    background-color: rgba(0, 0, 0, 0.404); /* use rgba for fine adjustments */
-    background-blend-mode: multiply;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
-    width: 100%;
-    height: 140vh;
-    color: #fff;
-    padding-bottom: 200px;
+.ContactSection {
+  background-image: url("./Backgrounds.jpg");
+  background-color: rgba(0, 0, 0, 0.404); /* use rgba for fine adjustments */
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 140vh;
+  color: #fff;
+  padding-bottom: 200px;
 }
-.ContactSection .form{
-    position:absolute;
-    width: 80%;
-    z-index: 2;
+.ContactSection .form {
+  position: absolute;
+  width: 80%;
+  z-index: 2;
 }
-.ContactSection label{
-    color: #2d98f0;
-    letter-spacing: 5px;
-    font-weight: bold;
+.ContactSection label {
+  color: #2d98f0;
+  letter-spacing: 5px;
+  font-weight: bold;
 }
-.ContactSection :placeholder-shown{
-    letter-spacing: 10px;
-    font-weight: 400;
-    text-shadow: 0px 0px 0px #2d98f0;
+.ContactSection :placeholder-shown {
+  letter-spacing: 10px;
+  font-weight: 400;
+  text-shadow: 0px 0px 0px #2d98f0;
 }
-.ContactSection input{
-    color: #1a7ccc;
-}
-
-.ContactSection .contactTouch{
-    background:black;
-    font-size:40px;
-    height:auto;
-    width: auto;
-    border-style: solid;
-    border-width: 3px;
-    border-image: linear-gradient(45deg, red, blue) 1;
-    color: #ffffff;
-    text-transform:uppercase;
-    letter-spacing: 2px;
-    -webkit-text-fill-color:transparent;
-    -webkit-text-stroke-width:2px;
-    z-index: 1;
-    position: relative;
-    box-sizing: border-box;
+.ContactSection input {
+  color: #1a7ccc;
 }
 
-.ContactSection::before{
-    content: "";
+.ContactSection .contactTouch {
+  background: black;
+  font-size: 40px;
+  height: auto;
+  width: auto;
+  border-style: solid;
+  border-width: 3px;
+  border-image: linear-gradient(45deg, red, blue) 1;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 2px;
+  z-index: 1;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.ContactSection::before {
+  content: "";
+  height: 40px;
+  width: 70px;
+  background: #fff;
+  position: absolute;
+  top: 8%;
+  left: 40%;
+  transform: rotate(100deg) skew(45deg);
+  z-index: 1;
+}
+.ContactSection .icon {
+  font-size: 1.2em;
+  padding-top: 20px;
+  height: auto;
+  cursor: pointer;
+  z-index: 2;
+  text-decoration: none;
+  color: #fff;
+}
+
+.ContactSection .direction .icon i {
+  color: rgb(22, 37, 255);
+  font-size: 4em;
+}
+
+.ContactSection .clouds {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 1;
+}
+.ContactSection .clouds img {
+  position: absolute;
+  bottom: 0;
+  max-width: 100%;
+  animation: CloudsAnimation calc(7s * var(--i)) ease infinite;
+}
+.ContactSection .clouds .CopyRight {
+  position: absolute;
+  bottom: 1%;
+  color: #2d98f0 !important;
+}
+@keyframes CloudsAnimation {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+@media (min-width: 200px) and (max-width: 399px) {
+  .ContactSection {
+    height: 175vh;
+  }
+  .ContactSection .form {
+    width: 90%;
+  }
+  .ContactSection::before {
+    height: 20px;
+    width: 25px;
+    top: 6.5%;
+    left: 20%;
+  }
+  .ContactSection .contactTouch {
+    font-size: 15px;
+  }
+  .ContactSection .icon {
+    font-size: 1em;
+    padding-top: 0px;
+  }
+  .ContactSection h3 {
+    font-size: 20px;
+    padding-top: 0px;
+  }
+  .ContactSection h6 {
+    font-size: 15px;
+    padding-top: 0px;
+  }
+  .ContactSection .direction .icon i {
+    color: rgb(19, 255, 30);
+    font-size: 3em;
+  }
+}
+@media (min-width: 400px) and (max-width: 699px) and  (min-height: 540px) and (max-height: 840px) {
+  .ContactSection {
+    height: 200vh;
+  }
+  .ContactSection .form {
+    width: 90%;
+  }
+  .ContactSection::before {
+   display: none;
+  }
+  .ContactSection .contactTouch {
+    font-size: 20px;
+  }
+}
+@media (min-width: 700px) and (max-width: 1030px) {
+  .ContactSection {
+    height: 170vh;
+  }
+  .ContactSection::before {
     height: 40px;
     width: 70px;
-    background:#fff;
-    position: absolute;
-    top: 8%;
-    left: 40%;
-    transform:rotate(100deg) skew(45deg);
-    z-index: 1;
+    top: 7.5%;
+    left: 30%;
+    transform: rotate(100deg) skew(45deg);
+  }
 }
-.ContactSection .icon{
-    font-size:1.2em;
-    padding-top: 20px;
-    height:auto;
-    cursor: pointer;
-    z-index: 2;
-    text-decoration: none;
-    color: #fff;
-}
-
-.ContactSection .direction .icon i{
-    color: rgb(22, 37, 255);
-    font-size:4em;
-}
-
-
-.ContactSection .clouds{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 1;
-}
-.ContactSection .clouds img{
-    position: absolute;
-    bottom: 0;
-    max-width: 100%;
-    animation: CloudsAnimation calc(7s * var(--i)) ease infinite;
-}
-.ContactSection .clouds .CopyRight{
-position: absolute;
-bottom: 1%;
-color: #2d98f0 !important;
-}
-@keyframes CloudsAnimation{
-    0% {
-        transform:translateX(-100%)
-    }
-    100%{
-        transform:translateX(100%)
-
-    }
-}
-
-@media (min-width:200px) and (max-width:399px) {
-    .ContactSection{
-        height:175vh
-    }
-    .ContactSection .form{
-        width: 90%;
-    }
-    .ContactSection::before{
-        height: 20px;
-        width: 25px;
-        top: 6.5%;
-        left: 20%;
-    }
-    .ContactSection .contactTouch{
-    font-size:15px;
-    }
-.ContactSection .icon{
-    font-size:1em;
-    padding-top:0px;
-}
-.ContactSection  h3{
-    font-size:20px;
-    padding-top:0px;
-}
-.ContactSection  h6{
-    font-size:15px;
-    padding-top:0px;
-}
-.ContactSection .direction .icon i{
-    color: rgb(19, 255, 30);
-    font-size:3em;
-}
-}
-@media (min-width:400px) and (max-width:699px) {
-    .ContactSection{
-        height:170vh
-    }
-    .ContactSection .form{
-        width: 90%;
-    }
-    .ContactSection::before{
-        height: 40px;
-        width: 50px;
-        top: 5.2%;
-        left: 22%;
-        transform:rotate(100deg) skew(45deg);
-    }
-    .ContactSection .contactTouch{
-    font-size:20px;
-    }
-}
-@media (min-width:700px) and (max-width:1030px) {
-    .ContactSection{
-        height:170vh
-    }
-    .ContactSection::before{
-        height: 40px;
-        width: 70px;
-        top: 7.5%;
-        left: 30%;
-        transform:rotate(100deg) skew(45deg);
-    }
-}
-@media (min-width:2430px) {
-    .ContactSection{
-        height:120vh
-    }
-    .ContactSection .form{
-
-        margin-left: -10%;
-    }
-    .ContactSection::before{
-        height: 40px;
-        width: 70px;
-        top: 5%;
-        left: 43%;
-        transform:rotate(100deg) skew(45deg);
-    }
+@media (min-width: 2430px) {
+  .ContactSection {
+    height: 120vh;
+  }
+  .ContactSection .form {
+    margin-left: -10%;
+  }
+  .ContactSection::before {
+    height: 40px;
+    width: 70px;
+    top: 5%;
+    left: 43%;
+    transform: rotate(100deg) skew(45deg);
+  }
 }
