--- a/src/Components/HomePage/Blog/Blog.css
+++ b/src/Components/HomePage/Blog/Blog.css
@@ -27,25 +27,7 @@
     position: relative;
     box-sizing: border-box;
 }
-.blogForm{
-position:absolute;
-background:red;
-z-index: 2;
-}
-.BlogSection .clouds{
-    position: relative;
-    top: 0;left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 1;
-}
-.BlogSection .clouds img{
-    position: absolute;
-    bottom: 0;
-    max-width: 100%;
-    animation: CloudsAnimation calc(15s * var(--i)) ease infinite;
-}
+
 @keyframes CloudsAnimation{
     0% {
         transform:translateX(-100%)
@@ -54,4 +36,14 @@ z-index: 2;
         transform:translateX(100%)
 
     }
+}
+  
+@media (min-width:200px) and (max-width:399px){
+    .blogTitle{font-size:30px;}
+}
+@media (min-width:400px) and (max-width:699px){
+    .blogTitle{font-size:50px;}
+}
+@media (min-width:700px) and (max-width:999px){
+    .blogTitle{font-size:80px;}
 }
