--- a/src/Components/HomePage/ContactForm/ContactForm.css
+++ b/src/Components/HomePage/ContactForm/ContactForm.css
@@ -8,7 +8,7 @@
   background-size: cover;
   position: relative;
   width: 100%;
-  height: 140vh;
+  height: 150vh;
   color: #fff;
   padding-bottom: 200px;
 }
@@ -140,6 +140,20 @@
 @media (min-width: 400px) and (max-width: 699px) and  (min-height: 540px) and (max-height: 840px) {
   .ContactSection {
     height: 200vh;
+  }
+  .ContactSection .form {
+    width: 90%;
+  }
+  .ContactSection::before {
+   display: none;
+  }
+  .ContactSection .contactTouch {
+    font-size: 20px;
+  }
+}
+@media (min-height: 540px) and (max-height: 840px) {
+  .ContactSection {
+    height: 250vh;
   }
   .ContactSection .form {
     width: 90%;
